extension/resources/style.css
/* Copied over from vimium project */
.VimFxReset {
    background: none !important;
    border: none !important;
    /*bottom: auto !important;*/
    box-shadow: none !important;
    color: WindowText !important;
    cursor: auto !important;
    display: inline !important;
    float: none !important;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans" !important;
    font-size: inherit !important;
    font-style: normal !important;
    font-variant: normal !important;
    font-weight: normal !important;
    height: auto !important;
    /*left: auto !important;*/
    letter-spacing: 0 !important;
    line-height: 100% !important;
    margin: 0 !important;
    max-height: none !important;
    max-width: none !important;
    min-height: 0 !important;
    min-width: 0 !important;
    opacity: 1 !important;
    padding: 0 !important;
    position: static !important;
    /*right: auto !important;*/
    text-align: left !important;
    text-decoration: none !important;
    text-indent: 0 !important;
    text-shadow: none !important;
    text-transform: none !important;
    /*top: auto !important;*/
    vertical-align: baseline !important;
    white-space: normal !important;
    /*width: auto !important;*/
    z-index: 99999999 !important;
    float: none !important;
}

/* Find */

input.VimFxNotFound#VimFxFindInput {
    color: red !important;
}

div.VimFxKeySequence {
    max-width:70px !important;
    text-align: right !important;
    font-weight:bold !important;
    color:#2f508e !important;
    white-space: nowrap !important;
}

.VimFxKeyLink {
    display: inline !important;
    background: #777 !important;
    border: none !important;
    color: #fff !important;
    cursor: text !important;
    font-weight: bold !important;
    border-radius: 3px !important;
    text-shadow: 1px 1px #666 !important;
    font-size: 75% !important;
    padding: 2px 3px !important;
    font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace !important; /* http://www.sitepoint.com/eight-definitive-font-stacks-2/ */
    font-size-adjust: 0.491 !important; /* http://www.cs.tut.fi/~jkorpela/x-height.html */
}

.VimFxKeyLink:hover,
.VimFxKeyLink:focus {
    outline: 3px solid #c55500 !important;
    -moz-outline-radius: 6px !important;
    background: #c55500 !important;
    border-radius: 0px !important;
    text-decoration: none !important;
}

.VimFxKeyLink.VimFxKeyConflict {
    background: red !important;
}

a.VimFxAddShortcutLink {
    color: #c55500 !important;
    cursor: pointer !important;
    margin-left: 2px !important;
}

input#VimFxFindInput {
    position: fixed !important;
    bottom: 2px !important;
    right: 2px !important;
    font-size: 13px !important;
    min-width: 200px !important;
    background: white !important;
    border: solid 1px ThreeDShadow !important;
    border-radius: 3px 3px 0 0 !important;
    padding: 4px 4px 6px !important;
}

/* Markers */

div.VimFxHintMarker {
    position: absolute !important;
    display: block !important;
    white-space: nowrap !important;
    overflow: hidden !important;
    font-size: 12px !important;
    padding: 1px 2px 0 2px !important;
    box-shadow: 0 3px 7px 0 rgba(0, 0, 0, 0.3) !important;
    background-color: #FFD76E !important;
    border: solid 1px #E1BA53 !important;
    border-radius: 2px !important;
}

div.VimFxHiddenHintMarker > span {
    display: none !important;
}

div.VimFxHintMarker > span {
    color: #302505 !important;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans" !important;
    font-weight: bold !important;
    font-size: 12px !important;
    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.6) !important;
}

div.VimFxHintMarker > span.VimFxCharMatch {
    color: #ffa22a !important;
}

/* Help Dialog */

div#VimFxHelpDialog {
    opacity:0.92 !important;
    background-color: Window !important;
    position:fixed !important;
    border-radius:3px !important;
    padding:15px 30px !important;
    width:700px !important;
    left:50% !important;
    /* This needs to be 1/2 width to horizontally center the help dialog */
    margin-left:-380px !important;
    top:30px !important;
    box-shadow: rgba(1, 2, 1, 0.4) 0px 0px 6px !important;
    overflow-y: auto !important;
    z-index:99999998 !important;
    font-size: 15px !important;
    max-height: 80% !important;
}

div#VimFxHelpDialog .VimFxTitle {
    font-size: 30px !important;
    line-height: 130% !important;
    display: block !important;
    float: left !important;
}

div#VimFxHelpDialog .VimFxClearFix {
    clear: both !important;
    float: none !important;
    display: block !important;
    visibility: hidden !important;
    height: 0 !important;
}

div#VimFxHelpDialog .VimFxTitleVim {
    color: darkgreen !important;
}

div#VimFxHelpDialog .VimFxTitleFx {
    color: darkred !important;
}

div#VimFxHelpDialog .VimFxVersion {
    float: right !important;
    position: absolute !important;
    top: 20px !important;
    right: 100px !important;
    font-size: 12px !important;
}

div#VimFxHelpDialog .VimFxClose {
    float: right !important;
    font-family: "Helvetica Neue", "Helvetica", "Arial", "Sans" !important;
    position: absolute !important;
    right: 20px !important;
    top: 20px !important;
    font-size: 20px !important;
    cursor: pointer !important;
}

div#VimFxHelpDialog .VimFxSocial {
    float: left !important;
}

div#VimFxHelpDialog .VimFxColumn {
    width: 46% !important;
    margin: 0 0 0 8% !important;
    float: left !important;
    margin-bottom: 10px !important;
}

div#VimFxHelpDialog .VimFxColumn:first-child {
    margin: 0 !important;
}

div#VimFxHelpDialog .VimFxSectionTitle {
    display: block !important;
    font-size: 15px !important;
    font-weight: bold !important;
    line-height: 140% !important;
    text-transform: uppercase !important;
    margin: 30px 0 10px 0 !important;

}

div#VimFxHelpDialog table.VimFxReset {
    display: table !important;
    table-layout: fixed !important;
}

div#VimFxHelpDialog tr.VimFxReset {
    display: table-row !important;
}

div#VimFxHelpDialog td.VimFxReset {
    display: table-cell !important;
    padding-top: 2px !important;
    padding-bottom: 4px !important;
    line-height: 15px !important;
}

div#VimFxHelpDialog .VimFxSocial {
    margin: 30px 0 0 0 !important;
    font-size: 12px !important;
}

div#VimFxHelpDialog .VimFxSocial p {
    display: block !important;
    line-height: 150% !important;
    margin: 0 0 5px 0 !important;
}

div#VimFxHelpDialog .VimFxSocial a {
    text-decoration: underline !important;
    color: darkblue !important;
    cursor: pointer !important;
}

div#VimFxHelpDialog span.VimFxDot {
    color: #818181 !important;
}

